feat: add custom time formats to TimePicker
Prototype aligned with DatePickerI18n: TimePickerI18n.setTimeFormat(s)
with additional parse-only formats, formatted and parsed with date-fns in
the connector, and DateTimePicker.setTimePickerI18n.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>