@@ -15,6 +15,7 @@
  */
 package com.vaadin.flow.component.timepicker.tests;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 
@@ -82,18 +83,122 @@ class TimePickerLocaleTest {
         assertLocaleTag(Locale.of("en", "GB_X"), "en");
     }
 
+    @Test
+    void noI18n_sendsNullI18n() {
+        TimePicker timePicker = new TimePicker();
+        timePicker.setLocale(Locale.US);
+        ui.add(timePicker);
+
+        List<List<Object>> calls = getUpdateI18nCalls();
+        Assertions.assertEquals(1, calls.size());
+        Assertions.assertEquals("en-US", calls.get(0).get(0));
+        Assertions.assertNull(calls.get(0).get(1));
+    }
+
+    @Test
+    void setI18nWithTimeFormats_sendsTimeFormats() {
+        TimePicker timePicker = new TimePicker();
+        timePicker.setLocale(Locale.US);
+        ui.add(timePicker);
+        ui.fakeClientCommunication();
+        ui.dumpPendingJavaScriptInvocations();
+
+        timePicker.setI18n(
+                new TimePicker.TimePickerI18n().setTimeFormats("HH.mm", "Hmm"));
+
+        List<List<Object>> calls = getUpdateI18nCalls();
+        Assertions.assertEquals(1, calls.size());
+        Assertions.assertEquals("en-US", calls.get(0).get(0));
+        Assertions.assertEquals("{\"timeFormats\":[\"HH.mm\",\"Hmm\"]}",
+                calls.get(0).get(1).toString());
+    }
+
+    @Test
+    void setI18nWithErrorMessagesOnly_sendsEmptyI18n() {
+        TimePicker timePicker = new TimePicker();
+        ui.add(timePicker);
+        ui.fakeClientCommunication();
+        ui.dumpPendingJavaScriptInvocations();
+
+        timePicker.setI18n(new TimePicker.TimePickerI18n()
+                .setBadInputErrorMessage("bad input")
+                .setRequiredErrorMessage("required").setMinErrorMessage("min")
+                .setMaxErrorMessage("max"));
+
+        List<List<Object>> calls = getUpdateI18nCalls();
+        Assertions.assertEquals(1, calls.size());
+        Assertions.assertEquals("{}", calls.get(0).get(1).toString());
+    }
+
+    @Test
+    void setI18nAndSetLocaleInOneRoundtrip_sendsOneUpdate() {
+        TimePicker timePicker = new TimePicker();
+        ui.add(timePicker);
+        ui.fakeClientCommunication();
+        ui.dumpPendingJavaScriptInvocations();
+
+        timePicker.setI18n(
+                new TimePicker.TimePickerI18n().setTimeFormat("HH:mm"));
+        timePicker.setLocale(Locale.UK);
+
+        List<List<Object>> calls = getUpdateI18nCalls();
+        Assertions.assertEquals(1, calls.size());
+        Assertions.assertEquals("en-GB", calls.get(0).get(0));
+        Assertions.assertEquals("{\"timeFormats\":[\"HH:mm\"]}",
+                calls.get(0).get(1).toString());
+    }
+
+    @Test
+    void detachAndReattach_resendsTimeFormats() {
+        TimePicker timePicker = new TimePicker();
+        timePicker.setI18n(
+                new TimePicker.TimePickerI18n().setTimeFormat("HH:mm"));
+        ui.add(timePicker);
+        ui.fakeClientCommunication();
+        ui.dumpPendingJavaScriptInvocations();
+
+        ui.remove(timePicker);
+        ui.add(timePicker);
+
+        List<List<Object>> calls = getUpdateI18nCalls();
+        Assertions.assertEquals(1, calls.size());
+        Assertions.assertEquals("{\"timeFormats\":[\"HH:mm\"]}",
+                calls.get(0).get(1).toString());
+    }
+
+    @Test
+    void resetTimeFormatAndSetI18n_sendsEmptyI18n() {
+        TimePicker timePicker = new TimePicker();
+        TimePicker.TimePickerI18n i18n = new TimePicker.TimePickerI18n()
+                .setTimeFormat("HH:mm");
+        timePicker.setI18n(i18n);
+        ui.add(timePicker);
+        ui.fakeClientCommunication();
+        ui.dumpPendingJavaScriptInvocations();
+
+        timePicker.setI18n(i18n.setTimeFormat(null));
+
+        List<List<Object>> calls = getUpdateI18nCalls();
+        Assertions.assertEquals(1, calls.size());
+        Assertions.assertEquals("{}", calls.get(0).get(1).toString());
+    }
+
+    private List<List<Object>> getUpdateI18nCalls() {
+        ui.fakeClientCommunication();
+        return ui.dumpPendingJavaScriptInvocations().stream()
+                .map(PendingJavaScriptInvocation::getInvocation)
+                .filter(invocation -> "$connector.updateI18n"
+                        .equals(JsFunctionCallUtil.getFunctionName(invocation)))
+                .map(JsFunctionCallUtil::getArguments).toList();
+    }
+
     private void assertLocaleTag(Locale locale, String expectedTag) {
         TimePicker timePicker = new TimePicker();
         ui.add(timePicker);
         timePicker.setLocale(locale);
-        ui.fakeClientCommunication();
 
-        List<Object> arguments = ui.dumpPendingJavaScriptInvocations().stream()
-                .map(PendingJavaScriptInvocation::getInvocation)
-                .filter(invocation -> "$connector.setLocale"
-                        .equals(JsFunctionCallUtil.getFunctionName(invocation)))
-                .map(JsFunctionCallUtil::getArguments).reduce((a, b) -> b)
-                .orElseThrow();
-        Assertions.assertEquals(List.of(expectedTag), arguments);
+        List<List<Object>> calls = getUpdateI18nCalls();
+        Assertions.assertEquals(1, calls.size());
+        Assertions.assertEquals(Arrays.asList(expectedTag, null), calls.get(0));
     }
 }
